[package]
name = "turing-challenge"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = "0.13"
tokio = { version = "1", features = ["full", "rt"] }
tokio-rustls = "0.26.1"
rustls-pemfile = "2.2.0"
uuid = { version = "1.11.0", features = ["v4"] }
config = "0.15.0"
serde = { version = "1.0.215", features = ["derive"] }